# geonet

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ruff.yml
docs/source/: conf.py  index.rst
docs/source/_autosummary/: components.coordinates.rst  components.sensors.rst  components.sensors.sensor.rst  components.sensors.sensor_connection_utils.rst  components.sensors.sensor_math.rst  engine.geo_color.rst  engine.geonet.rst  engine.grid.rst
docs/source/api/: components.coordinates.rst  components.rst  components.sensors.rst  components.sensors.sensor_manager.rst  engine.geo_color.rst  engine.geonet.rst  engine.grid.rst  engine.rst  src.components.rst  src.components.sensors.rst  src.engine.rst  src.rst
examples/: boundary_estimation.py  hello_network.py  using_gg.py  using_udg.py
examples/boundary_estimation/: __main__.py  dynamic_rain.py  propagating_rain.py  scenarios.py  state.py  static_rain.py
src/: __init__.py
src/components/: __init__.py  coordinate_utils.py  coordinates.py  sensor_connection_utils.py  sensor_manager.py  sensor_math.py
src/components/coords/: coordinate_utils.py
src/components/sensors/: __init__.py  default_sensor.py  sensor.py  sensor_connection_utils.py  sensor_creation_utils.py  sensor_manager.py  sensor_math.py
src/engine/: __init__.py  geo_color.py  geonet.py  grid.py
