[project]
name = "geonet"
version = "0.0.2"
description = "A simple sensor network simulation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["icecream>=2.1.4", "networkx>=3.5", "pygame>=2.6.1"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "examples*"]

[tool.uv]
package = true

[tool.ruff]
line-length = 88
fix = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort (import sorting)
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = ["E501"]

[tool.ruff.lint.isort]
force-single-line = false
force-sort-within-sections = true
lines-after-imports = 2
known-first-party = ["geonet"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[dependency-groups]
dev = [
    "basedpyright>=1.29.4",
    "pre-commit>=4.2.0",
    "ruff>=0.11.13",
]
